# ripgrep-all

./: .gitignore  .travis.yml  .typos.toml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  appveyor.yml  flake.nix  muxers  sweep-results.toml  update-readme.sh
.cargo/: audit.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
ci/: README.md  before_deploy.sh  build_deb.sh  install.sh  macos-install-packages  script.sh  sha256.sh  test_complete.sh  ubuntu-install-packages  utils.sh
doc/: Custom adapters.md  config.default.jsonc  notes.md  update-readme.sh
exampledir/: formatting.epub  mail_nested.eml  mail_pdf_attach.eml  sqlitedb  test.djvu  test.tar  test.tar.bz2  wasteland.docx  wasteland.epub  wasteland.fb2  wasteland.mkv  wasteland.mobi  wasteland.odt
exampledir/compress/: test.log.bz2
exampledir/decompress/: test.log.xz  test.log.zst
exampledir/demo/: hello.odt
exampledir/demodir/: greeting.mkv  hello.odt  hello.sqlite3
exampledir/encoding/: utf16le.txt  utf8.txt
exampledir/test/: excel.xlsx  github_email.eml  hello.sqlite3  hello.tar  mail_with_attachment.mbox  test.mbx
src/: adapted_iter.rs  adapters.rs  args.rs  caching_writer.rs  config.rs  expand.rs  lib.rs  matching.rs  pipe.rs  preproc.rs  preproc_cache.rs  read_iter.rs  recurse.rs  shell.rs  test_utils.rs
src/adapters/: custom.rs  decompress.rs  ffmpeg.rs  fns.rs  gron.rs  ipynb.rs  mbox.rs  mod.rs  pandoc.rs  pdfpages.rs  poppler.rs  postproc.rs  spawning.rs  sqlite.rs  tar.rs  tesseract.rs  writing.rs  zip.rs
tests/: fzf_launcher.rs  shell_tokenizer.rs
