[package]
authors = ["phiresky <phireskyde+git@gmail.com>"]
description = "rga: ripgrep, but also search in PDFs, E-Books, Office documents, zip, tar.gz, etc."
edition = "2024"
exclude = [
  "exampledir/*",
]
homepage = "https://github.com/phiresky/ripgrep-all"
license = "AGPL-3.0-or-later"
name = "ripgrep_all"
readme = "README.md"
repository = "https://github.com/phiresky/ripgrep-all"
version = "0.10.10"

[features]
default = ["perf-literal", "cache-dict-train"]
perf-literal = ["regex/perf-literal"]
cache-dict-train = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.96", features = ["backtrace"]}
async-compression = { version = "0.4.20", features = ["all", "all-algorithms", "tokio"] }
async-stream = "0.3.6"
async-trait = "0.1.86"
async_zip = {version = "0.0.18", features = ["full"]}
bytes = "1.10.0"
clap = {version = "4.5.53", features = ["derive"]}
derive_more = "0.99.19"
directories-next = "2.0.0"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
env_logger = "0.11"
json_comments = "0.2.2"
lazy_static = "1.5.0"
log = "0.4.26"
mailparse = "0.15.0"
memchr = "2.7.4"
mime2ext = "0.1.53"
open = "5.3.2"
path-clean = "1.0.1"
pretty-bytes = "0.2.2"
regex = "1.11.1"
zstd = "0.13.3"
rusqlite = {version = "0.37.0", features = ["vtab", "bundled"]}
schemars = {version = "0.9.0", features = ["preserve_order", "indexmap2"]}
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
size_format = "1.0.2"
tempfile = "3.17.1"
tokio = {version = "1.48.0", features = ["full"]}
tokio-rusqlite = "0.7.0"
tokio-stream = {version = "0.1.17", features = ["io-util", "tokio-util"]}
astral-tokio-tar =  "0.5.6" 
tar = "0.4.44"
tokio-util = {version = "0.7.13", features = ["io", "full"]}
tree_magic = {package = "tree_magic_mini", version = "3.1.6"}
sysinfo = "0.30.13"
toml = "0.9.8"
futures-lite = "2.6.1"

[dev-dependencies]
async-recursion = "1.1.1"
ctor = "0.2.0"
pretty_assertions = "1.3.0"
tempfile = "3.17.1"
tokio-test = "0.4.4"
tar = "0.4.44"

[profile.release]
debug = true
lto = "thin"
split-debuginfo = "packed"
codegen-units = 1
opt-level = "z"
